cmake_minimum_required(VERSION 3.31)
project(exam_first)

set(CMAKE_CXX_STANDARD 20)

add_executable(exam_first test/main.cpp
        third_task.cpp
        test/task_4.cpp
        test.cpp
        task_134.cpp
        task_135.cpp
        task_136.cpp
        task_138.cpp
        task_139.cpp
        task_140.cpp
        task_141.cpp
        task_142.cpp
        task_143.cpp
        task_144.cpp
        " task_145.cpp"
        task.cpp
        task_145.cpp
        task_146.cpp
        task_147.cpp
        task_148.cpp
        task_150.cpp
        task_151.cpp
        task_152.cpp
        task_153.cpp
        task_155.cpp
        task_157.cpp
        task_158.cpp
        task_159.cpp
        task_160.cpp
        task_161.cpp
        task_162.cpp
        task_163.cpp
        task_164.cpp
)
