cmake_minimum_required(VERSION 3.31)
project(exam_first)

set(CMAKE_CXX_STANDARD 20)

add_executable(exam_first test/main.cpp
        third_task.cpp
        test/task_4.cpp
        test.cpp
        task_134.cpp
        task_135.cpp
        task_136.cpp
        task_138.cpp
        task_139.cpp
        task_140.cpp
        task_141.cpp
        task_142.cpp
        task_143.cpp
        task_144.cpp
        " task_145.cpp"
        task_145.cpp
        task_146.cpp
        task_147.cpp
        task_148.cpp
        task_150.cpp
        task_151.cpp
        task_152.cpp
        task_153.cpp
        task_155.cpp
        task_157.cpp
        task_158.cpp
        task_159.cpp
        task_160.cpp
        task_161.cpp
        task_162.cpp
        task_163.cpp
        task_164.cpp
        task_166.cpp
        task_167.cpp
        task_168.cpp
        task_169.cpp
        task_170.cpp
        task_171.cpp
        task_172_eror.cpp
        task_173.cpp
        task_174.cpp
        task_175.cpp
        task_177.cpp
        task_178.cpp
        task_180.cpp
        task_181.cpp
        task_182.cpp
        task_183.cpp
        task_184.cpp
        task_185.cpp
        task_111.cpp
        task_186.cpp
        task_187_eror.cpp
        task_190.cpp
        task_191.cpp
        task_192.cpp
        task_193.cpp
        task_194.cpp
        task_197.cpp
        task_198.cpp
        task_200.cpp
        task_199.cpp
        task_201.cpp
        exam_1,47.cpp
        exam_2.cpp
        exam_3.cpp
        exam_4.cpp
        exam_5.cpp
        exam_6.cpp
        exam_7.cpp
        exam_8.cpp
        exam_9.cpp
        exam_10.cpp
        h.cpp
        h1.cpp
        h2.cpp
        h3.cpp
        h4.cpp
        h5.cpp
        h6.cpp
        h7.cpp
        h8.cpp
        h9.cpp
        h10.cpp
        h11.cpp
        h12.cpp
        h13.cpp
        h14.cpp
        h15.cpp
        h16.cpp
        h17.cpp
        h18.cpp
        h19.cpp
        h20.cpp
        h21.cpp
        h22.cpp
        h23.cpp
        h24.cpp
        h25.cpp
        h26.cpp
)
